--- a/chat/templates/chat/login.html
+++ b/chat/templates/chat/login.html
@@ -1,8 +1,10 @@
+{% load socialaccount %}
 <!DOCTYPE html>
 <html>
     <body>
 <div style="max-width: 400px; margin: auto; padding-top: 50px;">
   <!-- Google Button -->
+   <a href="{% provider_login_url 'google' %}"
   <button style="position: relative; background-color: white; border: 1px solid #ccc; padding: 12px 16px; width: 100%; border-radius: 6px; display: flex; align-items: center; margin-bottom: 16px;">
     <svg style="width: 24px; height: 24px; position: absolute; left: 16px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48">
       <path fill="#fbc02d" d="M43.6 20.5H42V20H24v8h11.3C33.7 33.1 29.2 36 24 36c-6.6 0-12-5.4-12-12s5.4-12 12-12c3.1 0 5.9 1.2 8 3.1l5.7-5.7C34.1 6.3 29.3 4 24 4 12.9 4 4 12.9 4 24s8.9 20 20 20c11 0 20-8 20-20 0-1.2-.1-2.1-.4-3.5z"/>
